--- a/deps/noUiSlider/nouislider.css
+++ b/deps/noUiSlider/nouislider.css
@@ -8,9 +8,10 @@
 -webkit-touch-callout: none;
 -webkit-user-select: none;
 -ms-touch-action: none;
-	touch-action: none;	
+	touch-action: none;
 -ms-user-select: none;
 -moz-user-select: none;
+	user-select: none;
 -moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
@@ -51,7 +52,8 @@
 /* Painting and performance;
  * Browsers can paint handles in their own layer.
  */
-.noUi-base {
+.noUi-base,
+.noUi-handle {
 	-webkit-transform: translate3d(0,0,0);
 	transform: translate3d(0,0,0);
 }
