Use GH Action to build site and deploy it on GH Pages
Also move all static assets to 'public' directory
Also remove 'dist' folder containing build output from git.

--- a/public/style.css
+++ b/public/style.css
@@ -308,7 +308,7 @@ h2 { font-size: 15px; line-height: 36px; margin: 0; }
 .matrix:hover,
 .matrix:hover .range,
 .matrix:hover .sv.unimportant {
-  background-image: url(images/matrix_grid.png);
+  background-image: url(matrix_grid.png);
 }
 
 .matrix .rows,
